build/apps/home-assistant/overlays/iot/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    #external-dns.alpha.kubernetes.io/target: infra.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: home-assistant
  name: home-assistant-proxy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hass.anotherlife.pl`)
      middlewares:
        - name: security #headers #traefik-dashboard-auth  #chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: home-assistant-proxy
          port: 443 #8123
  tls:
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-production
